<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/add_dialog_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/word_hint"
            android:padding="10dp"
            android:textSize="18sp"
            android:background="@drawable/edit_text_border"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/explanation"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/add_dialog_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:gravity="top"
            android:textSize="18sp"
            android:hint="@string/explanation_hint"
            android:padding="10dp"
            android:background="@drawable/edit_text_border"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/add_dialog_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_hint"
            android:padding="10dp"
            android:textSize="18sp"
            android:background="@drawable/edit_text_border"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">
        <CheckBox
            android:id="@+id/add_dialog_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cover"
            android:textSize="18sp"
            android:checked="true"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"/>
    </LinearLayout>
</LinearLayout>